Added Nav-Bar - and set responsiveness all good

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Portfolio</title>
+      <script src="https://kit.fontawesome.com/8dcb1459ae.js" crossorigin="anonymous"></script>
       <link rel="stylesheet" href="css/styles.css" />
    </head>
    <body>
@@ -12,13 +13,13 @@
          <header class="main-header">
             <nav class="nav-bar">
                <div class="nav-logo">
-                  <p>logo will go here</p>
+                  <i class="fab fa-medium-m m-logo"></i>
                </div>
                <ul class="nav-menu">
-                  <li><a href="#" class="nav-links">Projects</a></li>
-                  <li><a href="#" class="nav-links">About</a></li>
-                  <li><a href="#" class="nav-links">Skills</a></li>
-                  <li><a href="#" class="nav-links">Contact</a></li>
+                  <li class="li-item"><a href="#" class="nav-links">Projects</a></li>
+                  <li class="li-item"><a href="#" class="nav-links">About</a></li>
+                  <li class="li-item"><a href="#" class="nav-links">Skills</a></li>
+                  <li class="li-item"><a href="#" class="nav-links">Contact</a></li>
                </ul>
             </nav>
          </header>
