Nav, logo name, hero section all in and responsive

--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
                </ul>
             </nav>
          </header>
+         <div class="marko-title-container">
+            <div class="marko-logo">
+               <img src="images/marko.png" alt="Marko text logo" />
+               <p class="nick-name">"Nickname given by my Father"</p>
+            </div>
+         </div>
+         <div class="hero">
+            <!-- Image placed here in css -->
+            <h2 class="portfolio-text">Portfolio by</h2>
+            <h2 class="name">Mark Branscum</h2>
+         </div>
       </div>
+      <!-- ! </div> above is content wrapper end -->
    </body>
 </html>
