Added Project Cards and coded the filter buttons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                   <i class="fab fa-medium-m m-logo"></i>
                </div>
                <ul class="nav-menu">
-                  <li class="li-item"><a href="#" class="nav-links">Projects</a></li>
+                  <li class="li-item"><a href="#filter-btns-container" class="nav-links">Projects</a></li>
                   <li class="li-item"><a href="#" class="nav-links">About</a></li>
                   <li class="li-item"><a href="#" class="nav-links">Skills</a></li>
                   <li class="li-item"><a href="#" class="nav-links">Contact</a></li>
@@ -34,7 +34,80 @@
             <h2 class="portfolio-text">Portfolio by</h2>
             <h2 class="name">Mark Branscum</h2>
          </div>
+         <div class="main-content-wrapper">
+            <div id="filter-btns-container">
+               <button id="show-all-btn" class="button-filter">Show All</button>
+               <button id="fetch-api-btn" class="button-filter">Fetch API</button>
+               <button id="javascript-btn" class="button-filter">Javascript</button>
+               <button id="sass-btn" class="button-filter">Sass</button>
+               <button id="css-btn" class="button-filter">CSS/HTML</button>
+            </div>
+            <!-- ^ Portfolio cards go here -->
+            <div class="project-potrtfolio-container">
+               <div class="project-card game-show javascript">
+                  <!-- ! wheel of success card goes here -->
+                  <header class="card-header">
+                     <h2 class="card-title">Game Show</h2>
+                  </header>
+                  <div class="card-image"></div>
+                  <div class="card-footer">
+                     <!-- ! Anchor buttons go here -->
+                  </div>
+               </div>
+               <div class="project-card dashboard javascript sass">
+                  <!-- ! dashboard card goes here -->
+                  <header class="card-header">
+                     <h2 class="card-title">Dashboard</h2>
+                  </header>
+                  <div class="card-image"></div>
+                  <div class="card-footer">
+                     <!-- ! Anchor buttons go here -->
+                  </div>
+               </div>
+               <div class="project-card photogallery javascript">
+                  <!-- ! ??? card goes here -->
+                  <header class="card-header">
+                     <h2 class="card-title">Photo Gallery</h2>
+                  </header>
+                  <div class="card-image"></div>
+                  <div class="card-footer">
+                     <!-- ! Anchor buttons go here -->
+                  </div>
+               </div>
+               <div class="project-card employeedirectory javascript fetch-api sass">
+                  <!-- ! ??? card goes here -->
+                  <header class="card-header">
+                     <h2 class="card-title">Employee Directory</h2>
+                  </header>
+                  <div class="card-image"></div>
+                  <div class="card-footer">
+                     <!-- ! Anchor buttons go here -->
+                  </div>
+               </div>
+               <div class="project-card weather javascript fetch-api">
+                  <!-- ! ??? card goes here -->
+                  <header class="card-header">
+                     <h2 class="card-title">Weather API</h2>
+                  </header>
+                  <div class="card-image"></div>
+                  <div class="card-footer">
+                     <!-- ! Anchor buttons go here -->
+               </div>
+            </div>
+            <div class="project-card registration css-html">
+               <!-- ! ??? card goes here -->
+               <header class="card-header">
+                  <h2 class="card-title">Registration Form</h2>
+               </header>
+               <div class="card-image"></div>
+               <div class="card-footer">
+                  <!-- ! Anchor buttons go here -->
+            </div>
+         </div>
+         </div>
+         <!-- ^ Weather goes here -->
       </div>
       <!-- ! </div> above is content wrapper end -->
+      <script src="js/app.js"></script>
    </body>
 </html>
