Added first anchor buttons for code and demo

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
                </div>
                <ul class="nav-menu">
                   <li class="li-item"><a href="#filter-btns-container" class="nav-links">Projects</a></li>
-                  <li class="li-item"><a href="#" class="nav-links">About</a></li>
-                  <li class="li-item"><a href="#" class="nav-links">Skills</a></li>
-                  <li class="li-item"><a href="#" class="nav-links">Contact</a></li>
+                  <li class="li-item"><a href="#skills" class="nav-links">Skills</a></li>
+                  <li class="li-item"><a href="#contactInfo" class="nav-links">Contact</a></li>
                </ul>
             </nav>
          </header>
@@ -47,11 +46,10 @@
                <div class="project-card game-show javascript">
                   <header class="card-header">
                      <h2 class="card-title">Game Show</h2>
+                     <a href="https://github.com/jsMarko/project-6" class="code">GitHub</a>
+                     <a href="https://www.markbranscum.com/game-show/" class="demo">Demo</a>
                   </header>
                   <div class="card-image"></div>
-                  <div class="card-footer">
-                     <!--  Anchor buttons go here -->
-                  </div>
                </div>
                <div class="project-card dashboard javascript sass">
                   <header class="card-header">
@@ -98,6 +96,12 @@
                      <!--  Anchor buttons go here -->
                   </div>
                </div>
+            </div>
+            <div id="skills" class="skills-container">
+               <img class="skills-icons html" src="images/svg/html.svg" alt="html" />
+               <img class="skills-icons css" src="images/svg/css.svg" alt="css" />
+               <img class="skills-icons js" src="images/svg/javascript.svg" alt="javascript" />
+               <img class="skills-icons react" src="images/svg/react.svg" alt="react" />
             </div>
             <div class="contactInfo-container">
                <div class="header">
