Added all anchor buttons and wesather repositiry for one of the projects

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                <div class="project-card dashboard javascript sass">
                   <header class="card-header">
                      <h2 class="card-title">Dashboard</h2>
+                     <a href="https://github.com/jsMarko/project-7" class="code">GitHub</a>
+                     <a href="https://www.markbranscum.com/dashboard/" class="demo">Demo</a>
                   </header>
                   <div class="card-image"></div>
                   <div class="card-footer">
@@ -63,6 +65,8 @@
                <div class="project-card photogallery javascript">
                   <header class="card-header">
                      <h2 class="card-title">Photo Gallery</h2>
+                     <a href="https://github.com/jsMarko/project-5" class="code">GitHub</a>
+                     <a href="https://www.markbranscum.com/photo-gallery/" class="demo">Demo</a>
                   </header>
                   <div class="card-image"></div>
                   <div class="card-footer">
@@ -72,6 +76,8 @@
                <div class="project-card employeedirectory javascript fetch-api sass">
                   <header class="card-header">
                      <h2 class="card-title">Employee Directory</h2>
+                     <a href="https://github.com/jsMarko/project-8" class="code">GitHub</a>
+                     <a href="https://www.markbranscum.com/employee-directory/" class="demo">Demo</a>
                   </header>
                   <div class="card-image"></div>
                   <div class="card-footer">
@@ -81,6 +87,8 @@
                <div class="project-card weather javascript fetch-api">
                   <header class="card-header">
                      <h2 class="card-title">Weather API</h2>
+                     <a href="https://github.com/jsMarko/Weather-API" class="code">GitHub</a>
+                     <a href="https://www.markbranscum.com/weather/" class="demo">Demo</a>
                   </header>
                   <div class="card-image"></div>
                   <div class="card-footer">
@@ -90,6 +98,8 @@
                <div class="project-card registration css-html">
                   <header class="card-header">
                      <h2 class="card-title">Registration Form</h2>
+                     <a href="https://github.com/jsMarko/project-3" class="code">GitHub</a>
+                     <a href="https://www.markbranscum.com/registration-form/" class="demo">Demo</a>
                   </header>
                   <div class="card-image"></div>
                   <div class="card-footer">
